# quaternionic-kahler-nlp-complete

./: DELIVERY_SUMMARY.txt  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  train.py
configs/: default.yaml
examples/: complete_examples.py
src/quaternion_nlp/: __init__.py  kahler.py  quaternion.py  transformer.py  utils.py
tests/: test_complete.py
